--- a/index.html
+++ b/index.html
@@ -4,19 +4,22 @@
     <meta charset="utf-8" />
     <meta
       name="viewport"
-      content="width=device-width,initial-scale=1,viewport-fit=cover" />
+      content="width=device-width,initial-scale=1,viewport-fit=cover"
+    />
     <meta
       name="Description"
-      content="WHEN THEN Conscious Meme from Zand.Games" />
+      content="WHEN THEN Conscious Meme from Zand.Games"
+    />
     <script
       src="https://cdn.jsdelivr.net/npm/@jaames/iro@5"
-      charset="utf-8"></script>
+      charset="utf-8"
+    ></script>
     <link rel="stylesheet" href="bfa70b64.css" />
     <title>When Then Meme from Zand.Games</title>
   </head>
   <body>
     <when-then></when-then>
-    <script type="module" src="./b6ca1452.js"></script>
+    <script type="module" src="./50d0aad9.js"></script>
     <script inject-service-worker="">
       "serviceWorker" in navigator &&
         window.addEventListener("load", function () {
