--- a/index.html
+++ b/index.html
@@ -11,14 +11,15 @@
       content="WHEN THEN Conscious Meme from Zand.Games"
     />
     <base href="/" />
-  
+
     <script
       src="https://cdn.jsdelivr.net/npm/@jaames/iro@5"
       charset="utf-8"
     ></script>
 
     <link rel="stylesheet" href="./assets/style.css" />
-    
+    <link rel="stylesheet" href="./assets/fonts.css" />
+
     <title>When Then Meme from Zand.Games</title>
   </head>
 
