--- a/index.html
+++ b/index.html
@@ -15,11 +15,12 @@
       charset="utf-8"
     ></script>
     <link rel="stylesheet" href="bfa70b64.css" />
+    <link rel="stylesheet" href="d91c8125.css" />
     <title>When Then Meme from Zand.Games</title>
   </head>
   <body>
     <when-then></when-then>
-    <script type="module" src="./50d0aad9.js"></script>
+    <script type="module" src="./e8e140df.js"></script>
     <script inject-service-worker="">
       "serviceWorker" in navigator &&
         window.addEventListener("load", function () {
