--- a/index.html
+++ b/index.html
@@ -12,11 +12,12 @@
       src="https://cdn.jsdelivr.net/npm/@jaames/iro@5"
       charset="utf-8"></script>
     <link rel="stylesheet" href="bfa70b64.css" />
+    <link rel="stylesheet" href="d91c8125.css" />
     <title>When Then Meme from Zand.Games</title>
   </head>
   <body>
     <when-then></when-then>
-    <script type="module" src="./b6ca1452.js"></script>
+    <script type="module" src="./bd999ddf.js"></script>
     <script inject-service-worker="">
       "serviceWorker" in navigator &&
         window.addEventListener("load", function () {
